<resources>
    <string name="app_name">AndroidMastery</string>
    <string name="nav_home">Home</string>
    <string name="nav_browse">Browse</string>
    <string name="nav_interests">Interests</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_profile">Profile</string>
    <string name="search">Search</string>
    <string name="notify_detail">Notification Details</string>
    <string name="themes_btn">Themes Button</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
