<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_24dp"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/browseFragment"
        android:icon="@drawable/ic_dashboard_24dp"
        android:title="@string/nav_browse" />

    <item
        android:id="@+id/interestFragment"
        android:icon="@drawable/ic_interests_24dp"
        android:title="@string/nav_interests" />

    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/ic_notifications_24dp"
        android:title="@string/nav_notifications" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_account_24dp"
        android:title="@string/nav_profile" />

</menu>